# fullsend-sessions

./: .gitignore  CLAUDE.md  Makefile  README.md  agentsview-s3.toml  compose.s3.yaml  compose.yaml  justfile  pyproject.toml
.agents/skills/: agentsview  fs-sessions
.claude/: settings.json
.claude/skills/: meeting-transcripts.md
docs/: README.md  agentsview-hosting.md  charter.md  commandments.md
marcel-hild_rhdh-fullsend/: 96efbbcd-7890-4a4c-9eae-96846ceff0de.jsonl
meetings/transcripts/: 2026-07-07-transcript-1.txt  2026-07-07-transcript-2.txt  2026-07-08-transcript.txt
scripts/: export-session.sh  fetch-fullsend-runs.sh  fs-sessions.sh  s3-policy.json  setup-s3.sh
sessions/christoph-jerolimov_fullsend-sessions/: 966157b8-c487-4028-aa93-68cdf8f7bf6a.jsonl  9ab5bd62-7a85-4946-a92c-2891069d7328.jsonl  f94ebecb-1811-44c6-8d2c-2846ef635932.jsonl
sessions/christoph-jerolimov_homepage/: f3dfd3f6-29fb-47b2-a947-7d6c19864825.jsonl
sessions/christoph-jerolimov_rhdh-loadtest/: 6835e661-2eed-4460-8c42-adf9cd55c605.jsonl
sessions/christoph-jerolimov_rhdh-plugin-export-overlays/: f07b1bf9-94ba-434b-9848-1029003eeb9f.jsonl
sessions/christoph-jerolimov_rhdh-plugins/: 5c29df87-7f94-4a7d-803b-fec9c0c5e385.jsonl
sessions/marcel-hild_fullsend-sessions/: 100cbc3a-dbcb-4f79-a0d0-d2ce5cc3ef9f.jsonl  4f34fe9f-8cf0-47df-9c87-3f54bf626be5.jsonl  7d9a0721-c93a-45f1-aea3-7d67d9b773cf.jsonl  a5c5ba87-14ff-48be-8657-32993167bce7.jsonl  fd11e2ff-419c-40eb-93a7-0108fa765a1a.jsonl
skills/agentsview/: SKILL.md
skills/fs-sessions/: SKILL.md
tests/: conftest.py
(+48 files in other folders)
