[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fs-sessions"
version = "0.1.0"
requires-python = ">=3.10"
description = "Share and browse Claude Code session transcripts"

[dependency-groups]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
fs-sessions = "fs_sessions.cli:main"

[tool.setuptools.packages.find]
where = ["skills/fs-sessions"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["skills/fs-sessions", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
